tests/invalid/type_mismatch.err_exp
type_mismatch.m:019: In clause for predicate `type_mismatch:p1/2':
type_mismatch.m:019:   in unification of variable `Tuple'
type_mismatch.m:019:   and term `f1(V_5, Field, V_6)':
type_mismatch.m:019:   type error in argument(s) of functor `f1/3'.
type_mismatch.m:019:   The types of the relevant arguments are
type_mismatch.m:019:   argument 2 (Field): actual `float', expected `int'.
type_mismatch.m:022: In clause for predicate `type_mismatch:p2/2':
type_mismatch.m:022:   in unification of variable `Tuple'
type_mismatch.m:022:   and term `f2(V_5, Field, V_6)':
type_mismatch.m:022:   type error in argument(s) of functor `f2/3'.
type_mismatch.m:022:   The types of the relevant arguments are
type_mismatch.m:022:   argument 2 (Field): actual `float', expected `int'.
type_mismatch.m:025: In clause for predicate `type_mismatch:p3/2':
type_mismatch.m:025:   in unification of variable `Tuple'
type_mismatch.m:025:   and term `f3(V_5, Field, V_6)':
type_mismatch.m:025:   type error in argument(s) of functor `f3/3'.
type_mismatch.m:025:   The types of the relevant arguments are
type_mismatch.m:025:   argument 2 (Field): actual `F3c', expected `T3b'.
type_mismatch.m:032: In clause for predicate `type_mismatch:p4a/2':
type_mismatch.m:032:   in unification of variable `Tuple'
type_mismatch.m:032:   and term `f4(Field, V_5, V_6)':
type_mismatch.m:032:   type error in argument(s) of functor `f4/3'.
type_mismatch.m:032:   The types of the relevant arguments are
type_mismatch.m:032:   argument 1 (Field): actual `float', expected `T4'.
type_mismatch.m:035: In clause for predicate `type_mismatch:p4b/3':
type_mismatch.m:035:   in unification of variable `Tuple'
type_mismatch.m:035:   and term `f4(Field1, Field2, V_7)':
type_mismatch.m:035:   type error in argument(s) of functor `f4/3'.
type_mismatch.m:035:   The types of the relevant arguments are
type_mismatch.m:035:   argument 1 (Field1): actual `float', expected `T4';
type_mismatch.m:035:   argument 2 (Field2): actual `float', expected `int'.
For more information, try recompiling with `-E'.
